// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewTemplateDetails component matches not yet submitted snapshot 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <div
      class="preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template ID
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          template-id
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Type
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          Channel template
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Status
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <strong
            class="nhsuk-tag"
          >
            Not yet submitted
          </strong>
        </div>
      </div>
    </div>
    <div
      class="nhsuk-u-margin-top-4 preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
            data-testid="preview__heading-0"
            id="preview-heading-heading"
          >
            Heading
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <div
            class="preview__col_content"
            data-testid="preview__content-0"
            id="preview-content-heading"
          >
            Test value-1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetails component matches submitted snapshot 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <div
      class="preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template ID
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          template-id
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Type
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          Channel template
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Status
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
          >
            Submitted
          </strong>
        </div>
      </div>
    </div>
    <div
      class="nhsuk-u-margin-top-4 preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
            data-testid="preview__heading-0"
            id="preview-heading-heading"
          >
            Heading
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <div
            class="preview__col_content"
            data-testid="preview__content-0"
            id="preview-content-heading"
          >
            Test value-1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetails component renders letter template when testPersonalisationInputFile is not set 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <div
      class="preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template ID
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          template-id
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Type
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          Letter - French
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Status
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
          >
            Submitted
          </strong>
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template file
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <div
            class="container"
          >
            <svg
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.pdf
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetails component renders letter template when testPersonalisationInputFile is set 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <div
      class="preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template ID
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          template-id
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Type
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          Letter - French
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Status
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
          >
            Submitted
          </strong>
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template file
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <div
            class="container"
          >
            <svg
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.pdf
            </p>
          </div>
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Test personalisation file
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <div
            class="container"
          >
            <svg
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.csv
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetails component renders without content preview 1`] = `
<DocumentFragment>
  <h1
    class="preview__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <div
      class="preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template ID
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          template-id
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Type
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          Channel template
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Status
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
          >
            Submitted
          </strong>
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Meta
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <p>
            metadata
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
